Gallery spell change

--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
         <div class="container">
             <div class="row">
                 <div class="text-center">
-                    <h2>our gellary<h2>
+                    <h2>our gallery<h2>
                 </div>
                 <div class="carousel">
                     <div><img src="images/dish (1).jpg" class="img-fluid w-100"></div>
