--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
                 <h2>Our service</h2>
                 <p>We have an exceptional range of services to help you.</p>
             </div>
-            <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
+            <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4 justify-content-center">
 <!--                 <div class="col">
                     <div class="card h-100">
                         <img src="images/corp.webp" class="card-img-top" alt="...">
